--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
           <label for="todo-input">Add to your todo list!</label>
           <input class="todo-input "type="text" name="todo-input">
           <button class="add-todo">ADD</button>
+          <button class="clear-todo">Clear All</button>
         </section>
       <ol class="todo-list"></ol>
     </div>
     <script src="./todos.js"></script>
     <script src="./main.js"></script>
+    <script src="./backend.js"></script>
   </body>
 </html>
